--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- carpenter.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -85,9 +86,9 @@
                         <label>Sheet Dimensions (cm)</label>
                         <div class="dimension-inputs">
                             <label for="sheet-length">Length (cm)</label>
-                            <input type="number" id="sheet-length" placeholder="Length" value="244" min="1" required aria-describedby="sheet-length-error">
+                            <input type="number" id="sheet-length" placeholder="Length" value="122" min="1" required aria-describedby="sheet-length-error">
                             <label for="sheet-width">Width (cm)</label>
-                            <input type="number" id="sheet-width" placeholder="Width" value="122" min="1" required aria-describedby="sheet-width-error">
+                            <input type="number" id="sheet-width" placeholder="Width" value="244" min="1" required aria-describedby="sheet-width-error">
                         </div>
                         <div class="error-message" id="sheet-length-error" role="alert" aria-live="polite"></div>
                         <div class="error-message" id="sheet-width-error" role="alert" aria-live="polite"></div>
@@ -102,13 +103,13 @@
                     <div class="form-grid">
                         <div class="form-group">
                             <label for="kerf">Saw Kerf (cm)</label>
-                            <input type="number" id="kerf" value="0.3" step="0.1" min="0" required aria-describedby="kerf-error">
+                            <input type="number" id="kerf" value="2" step="0.1" min="0" required aria-describedby="kerf-error">
                             <div class="error-message" id="kerf-error" role="alert" aria-live="polite"></div>
                         </div>
                         
                         <div class="form-group">
                             <label for="edge-offset">Edge Offset (cm)</label>
-                            <input type="number" id="edge-offset" value="0.5" step="0.1" min="0" required aria-describedby="edge-offset-error">
+                            <input type="number" id="edge-offset" value="1" step="0.1" min="0" required aria-describedby="edge-offset-error">
                             <div class="error-message" id="edge-offset-error" role="alert" aria-live="polite"></div>
                         </div>
                     </div>
@@ -387,6 +388,4 @@
     <script src="script.js" defer></script>
 
 </body>
-
 </html>
-
