--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <link rel="icon" type="image/svg+xml" href="image/favicon.svg" />
 <link rel="shortcut icon" href="image/favicon.ico" />
 <link rel="apple-touch-icon" sizes="180x180" href="image/apple-touch-icon.png" />
-<meta name="apple-mobile-web-app-title" content="Cutting Optimization Studio" />
-<link rel="manifest" href="image/site.webmanifest">
+<meta name="apple-mobile-web-app-title" content="Cutting optimization Studio " />
+<link rel="manifest" href="image/site.webmanifest" />
 <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" as="style">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
