--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                         <div class="form-group">
                             <label for="sheet-type">Sheet Type</label>
                             <select id="sheet-type">
+                                A<option value="mdf">MDF</option>
                                 <option value="plywood">Plywood</option>
-                                <option value="mdf">MDF</option>
                                 <option value="glass">Glass</option>
                                 <option value="acrylic">Acrylic</option>
                                 <option value="metal">Metal Sheet</option>
@@ -389,5 +389,6 @@
 
 </body>
 </html>
+
 
 
